[package]
name = "ble-over-ip"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
uuid = "1.7.0"
serde = "1.0.197"
anyhow = "1.0.80"
clap = { version = "4.5.2", features = ["derive"] }
btleplug = "0.11.5"

[[bin]]
name = "client"
path = "src/bin/client/main.rs"

[[bin]]
name = "server"
path = "src/bin/server/main.rs"